[gd_scene load_steps=8 format=3 uid="uid://do0uftv3e60xk"]

[ext_resource type="Script" uid="uid://bec141f5px1q7" path="res://scripts/SoulRefine.gd" id="1_ulh5w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.15, 0.15, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.85, 0.3, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.25, 0.25, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.35, 0.35, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.3, 0.3, 0.35, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_inner_panel"]
bg_color = Color(0.2, 0.2, 0.25, 0.95)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_refine_button"]
bg_color = Color(1, 0.85, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="SoulRefine" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ulh5w")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -350.0
offset_right = 400.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TopBar" type="HBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "魂印精炼"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "×"

[node name="ContentContainer" type="HBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="SelectedSoulsPanel" type="Panel" parent="MainPanel/MarginContainer/VBoxContainer/ContentContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_inner_panel")

[node name="MarginContainer" type="MarginContainer" parent="MainPanel/MarginContainer/VBoxContainer/ContentContainer/SelectedSoulsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/ContentContainer/SelectedSoulsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/ContentContainer/SelectedSoulsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 20
text = "已选魂印 (0/3)"
horizontal_alignment = 1

[node name="SelectedSoulsGrid" type="GridContainer" parent="MainPanel/MarginContainer/VBoxContainer/ContentContainer/SelectedSoulsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 1

[node name="InventoryPanel" type="Panel" parent="MainPanel/MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_inner_panel")

[node name="MarginContainer" type="MarginContainer" parent="MainPanel/MarginContainer/VBoxContainer/ContentContainer/InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer/ContentContainer/InventoryPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/ContentContainer/InventoryPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 20
text = "背包魂印"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MainPanel/MarginContainer/VBoxContainer/ContentContainer/InventoryPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="InventoryGrid" type="GridContainer" parent="MainPanel/MarginContainer/VBoxContainer/ContentContainer/InventoryPanel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="BottomBar" type="VBoxContainer" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="InfoLabel" type="Label" parent="MainPanel/MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "选择3个相同品质的魂印进行精炼"
horizontal_alignment = 1

[node name="RefineButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer/BottomBar"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.15, 0.15, 0.2, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_refine_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/disabled = SubResource("StyleBoxFlat_button_normal")
disabled = true
text = "精炼"

[node name="MessageDialog" type="AcceptDialog" parent="."]
title = "提示"
dialog_text = "消息"
dialog_autowrap = true

[connection signal="pressed" from="MainPanel/MarginContainer/VBoxContainer/TopBar/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="MainPanel/MarginContainer/VBoxContainer/BottomBar/RefineButton" to="." method="_on_refine_button_pressed"]
